Skip to content

text_renderer/freetype: memory leak in AnalyzeParagraph

Direct leak of 224 byte(s) in 1 object(s) allocated from:
    [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f7902b87fc1 in __interceptor_calloc /build/gcc/src/gcc/libsanitizer/asan/asan_malloc_linux.cc:95
    [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f78e67fa2a8 in hb_unicode_funcs_create (/usr/lib/libharfbuzz.so.0+0x212a8)
    [#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7f78e6849e77  (/usr/lib/libharfbuzz.so.0+0x70e77)
    [#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7f78c7366091 in AnalyzeParagraph modules/text_renderer/freetype/text_layout.c:469
    [#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7f78c7366091 in BuildParagraph modules/text_renderer/freetype/text_layout.c:1660
    [#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7f78c736ce27 in LayoutTextBlock modules/text_renderer/freetype/text_layout.c:1773
    [#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7f78c735a7fc in Render modules/text_renderer/freetype/freetype.c:1244
    [#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7f79024d24ce in SpuRenderText src/video_output/vout_subpictures.c:285
    [#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x7f79024d24ce in SpuRenderRegion src/video_output/vout_subpictures.c:681
    [#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x7f79024d24ce in SpuRenderSubpictures src/video_output/vout_subpictures.c:1108
    [#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x7f79024d24ce in spu_Render src/video_output/vout_subpictures.c:1579
    [#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x7f79024bfeb7 in ThreadDisplayRenderPicture src/video_output/video_output.c:1052
    [#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x7f79024c0716 in ThreadDisplayPicture src/video_output/video_output.c:1245
    [#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x7f79024c312a in Thread src/video_output/video_output.c:1817
    [#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0x7f7901713074 in start_thread (/usr/lib/libpthread.so.0+0x7074)
    [#15](https://code.videolan.org/videolan/vlc/-/issues/15) 0x7f790144853e in clone (/usr/lib/libc.so.6+0xf853e)
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information