text_renderer: freetype: fix memory leak in AnalyzeParagraph

fixes: #20881
Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>